<resources>
    <string name="app_name">Nicole_WeatherApp</string>
    <string name="Weather">Weather</string>
    <string name="date">Date</string>
    <string name="ville">Ville</string>
    <string name="temp">Temperatur</string>
    <string name="temperature">Temperature</string>
    <string name="degree">O</string>
    <string name="desc">Description</string>
    <string name="WindSpeed">Vitesse du vent :</string>
    <string name="vent">Vent</string>
</resources>